@@ -16,9 +16,7 @@
 
 package org.springframework.security.ldap.userdetails;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.HashSet;
+import java.util.*;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -31,6 +29,10 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.ldap.UnboundIdContainerConfig;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
+
+import javax.naming.InvalidNameException;
+import javax.naming.NamingException;
+import javax.naming.ldap.LdapName;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -60,24 +62,25 @@ public class NestedLdapAuthoritiesPopulatorTests {
 	private LdapAuthority circularJavaDevelopers;
 
 	@BeforeEach
-	public void setUp() {
+	public void setUp() throws InvalidNameException {
 		this.populator = new NestedLdapAuthoritiesPopulator(this.contextSource, "ou=jdeveloper");
 		this.populator.setGroupSearchFilter("(member={0})");
-		this.populator.setIgnorePartialResultException(false);
+		// this.populator.setIgnorePartialResultException(false);
 		this.populator.setRolePrefix("");
 		this.populator.setSearchSubtree(true);
 		this.populator.setConvertToUpperCase(false);
-		this.jDevelopers = new LdapAuthority("j-developers", "cn=j-developers,ou=jdeveloper,dc=springframework,dc=org");
+		this.jDevelopers = new LdapAuthority("j-developers",
+				new LdapName("cn=j-developers,ou=jdeveloper,dc=springframework,dc=org"));
 		this.javaDevelopers = new LdapAuthority("java-developers",
-				"cn=java-developers,ou=jdeveloper,dc=springframework,dc=org");
+				new LdapName("cn=java-developers,ou=jdeveloper,dc=springframework,dc=org"));
 		this.groovyDevelopers = new LdapAuthority("groovy-developers",
-				"cn=groovy-developers,ou=jdeveloper,dc=springframework,dc=org");
+				new LdapName("cn=groovy-developers,ou=jdeveloper,dc=springframework,dc=org"));
 		this.scalaDevelopers = new LdapAuthority("scala-developers",
-				"cn=scala-developers,ou=jdeveloper,dc=springframework,dc=org");
+				new LdapName("cn=scala-developers,ou=jdeveloper,dc=springframework,dc=org"));
 		this.closureDevelopers = new LdapAuthority("closure-developers",
-				"cn=closure-developers,ou=jdeveloper,dc=springframework,dc=org");
+				new LdapName("cn=closure-developers,ou=jdeveloper,dc=springframework,dc=org"));
 		this.circularJavaDevelopers = new LdapAuthority("circular-java-developers",
-				"cn=circular-java-developers,ou=jdeveloper,dc=springframework,dc=org");
+				new LdapName("cn=circular-java-developers,ou=jdeveloper,dc=springframework,dc=org"));
 	}
 
 	@Test
@@ -95,6 +98,9 @@ public class NestedLdapAuthoritiesPopulatorTests {
 		Collection<GrantedAuthority> authorities = this.populator.getGrantedAuthorities(ctx, "javadude");
 		assertThat(authorities).hasSize(4);
 		assertThat(authorities).contains(this.javaDevelopers);
+		assertThat(authorities).contains(this.circularJavaDevelopers);
+		assertThat(authorities).contains(this.groovyDevelopers);
+		assertThat(authorities).contains(this.jDevelopers);
 	}
 
 	@Test
@@ -103,12 +109,12 @@ public class NestedLdapAuthoritiesPopulatorTests {
 		DirContextAdapter ctx = new DirContextAdapter("uid=scaladude,ou=people,dc=springframework,dc=org");
 		Collection<GrantedAuthority> authorities = this.populator.getGrantedAuthorities(ctx, "scaladude");
 		assertThat(authorities).hasSize(1);
-		assertThat(authorities).isEqualTo(Arrays.asList(this.scalaDevelopers));
+		assertThat(authorities).isEqualTo(Collections.singletonList(this.scalaDevelopers));
 	}
 
 	@Test
 	public void testGroovyDudeJDevelopersAuthorities() {
-		DirContextAdapter ctx = new DirContextAdapter("uid=groovydude,ou=people,dc=springframework,dc=org");
+		DirContextAdapter ctx = new DirContextAdapter("uid=groovydude,ou=people");
 		Collection<GrantedAuthority> authorities = this.populator.getGrantedAuthorities(ctx, "groovydude");
 		assertThat(authorities).hasSize(4);
 		assertThat(authorities).isEqualTo(Arrays.asList(this.javaDevelopers, this.circularJavaDevelopers,
@@ -116,8 +122,8 @@ public class NestedLdapAuthoritiesPopulatorTests {
 	}
 
 	@Test
-	public void testClosureDudeJDevelopersWithMembershipAsAttributeValues() {
-		this.populator.setAttributeNames(new HashSet(Arrays.asList("member")));
+	public void testClosureDudeJDevelopersWithMembershipAsAttributeValues() throws NamingException {
+		this.populator.setAttributeNames(new HashSet<>(List.of("member")));
 
 		DirContextAdapter ctx = new DirContextAdapter("uid=closuredude,ou=people,dc=springframework,dc=org");
 		Collection<GrantedAuthority> authorities = this.populator.getGrantedAuthorities(ctx, "closuredude");
@@ -128,19 +134,18 @@ public class NestedLdapAuthoritiesPopulatorTests {
 		LdapAuthority[] ldapAuthorities = authorities.toArray(new LdapAuthority[0]);
 		assertThat(ldapAuthorities).hasSize(5);
 		// groovy-developers group
-		assertThat(ldapAuthorities[0].getAttributes()).containsKey("member");
 		assertThat(ldapAuthorities[0].getAttributes().get("member")).isNotNull();
-		assertThat(ldapAuthorities[0].getAttributes().get("member")).hasSize(3);
-		assertThat(ldapAuthorities[0].getFirstAttributeValue("member"))
-			.isEqualTo("cn=groovy-developers,ou=jdeveloper,dc=springframework,dc=org");
+		assertThat(ldapAuthorities[0].getAttributes().get("member")).isNotNull();
+		assertThat(ldapAuthorities[0].getAttributes().get("member").size()).isEqualTo(3);
+		assertThat(ldapAuthorities[0].getFirstAttributeValue("member")).isEqualTo("cn=groovy-developers,ou=jdeveloper");
 
 		// java group
-		assertThat(ldapAuthorities[1].getAttributes()).containsKey("member");
 		assertThat(ldapAuthorities[1].getAttributes().get("member")).isNotNull();
-		assertThat(ldapAuthorities[1].getAttributes().get("member")).hasSize(3);
+		assertThat(ldapAuthorities[1].getAttributes().get("member")).isNotNull();
+		assertThat(ldapAuthorities[1].getAttributes().get("member").size()).isEqualTo(3);
 		assertThat(this.groovyDevelopers.getDn()).isEqualTo(ldapAuthorities[1].getFirstAttributeValue("member"));
-		assertThat(ldapAuthorities[2].getAttributes().get("member"))
-			.contains("uid=closuredude,ou=people,dc=springframework,dc=org");
+		assertThat(ldapAuthorities[2].getAttributes().get("member").get().toString())
+			.contains("uid=closuredude,ou=people");
 
 		// test non existent attribute
 		assertThat(ldapAuthorities[2].getFirstAttributeValue("test")).isNull();
